Fix squished logo on mobiles

--- a/kanisa/static/kanisa/css/kanisa.css
+++ b/kanisa/static/kanisa/css/kanisa.css
@@ -205,6 +205,7 @@ textarea.kanisamaininputwidget {
 
 #logo img.main_logo {
     max-width: 100%;
+    height: auto;
 }
 
 .editable_block_wrapper {
